@@ -1,5 +1,6 @@
 pgcenter (devel) unstable; urgency=low
 
+  * add compatibility with pg-9.6 (pg_stat_activity).
   * use set_escdelay() instead of direct changing ESCDELAY.
   * fix signal_group_backend(), doesn't work if mask has more than one flag.
   * improve const correctness.
